edit install button on task edit